namespace ApplicationCore.Domain.Enums
{
    public enum EstadoReporte
    {
        Pendiente,
        Resuelto,
        Rechazado
    }
}
