namespace ApplicationCore.Domain.Enums
{
    public enum TipoLista
    {
        Vista,
        Pendiente,
        MeGusta,
        Otra
    }
}
