namespace ApplicationCore.Domain.Enums
{
    public enum TipoNotificacion
    {
        LikeResenya,
        Reporte,
        Anuncio,
        Otro
    }
}
